k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-builder-service
spec:
  type: NodePort
  selector:
    app: resume-builder
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
